JEAP-6890: Update Spring Boot 4